--- a/index.html
+++ b/index.html
@@ -9,36 +9,33 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Paytone+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-    <img src="images/header_bikes.jpg" alt="Header Image">  
+      <h1>
+        <i class="fa-solid fa-bicycle"></i>
+        Divvy Dashboard
+      </h1>
     </header>
     <section class="sidebar">
       <ul class="sidebar__list">
         <li class="sidebar__selection">
-          <i class="sidebar__icon fa-solid fa-gauge"></i
-          ><span class="sidebar__text">Dashboard</span>
+          <i class="sidebar__icon fa-solid fa-map"></i
+          ><span class="sidebar__text">Map</span>
         </li>
         <li class="sidebar__selection">
-          <i class="sidebar__icon fa-solid fa-user" style="color: #ccc"></i
-          ><span class="sidebar__text">Users</span>
+          <i class="sidebar__icon fa-solid fa-cloud"></i
+          ><span class="sidebar__text">Weather</span>
         </li>
         <li class="sidebar__selection">
-          <i class="sidebar__icon fa-solid fa-sitemap"></i
-          ><span class="sidebar__text">Site</span>
-        </li>
-        <li class="sidebar__selection">
-          <i class="sidebar__icon fa-solid fa-dollar-sign"></i
-          ><span class="sidebar__text">Sales</span>
-        </li>
-        <li class="sidebar__selection">
-          <i class="sidebar__icon fa-solid fa-envelope"></i
-          ><span class="sidebar__text">Emails</span>
-        </li>
-        <li class="sidebar__selection">
-          <i class="sidebar__icon fa-solid fa-gear"></i
-          ><span class="sidebar__text">Settings</span>
+          <i class="sidebar__icon fa-solid fa-trophy"></i
+          ><span class="sidebar__text">Records</span>
         </li>
       </ul>
     </section>
