--- a/index.html
+++ b/index.html
@@ -17,29 +17,20 @@
     />
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <i
-          class="fa-solid fa-chevron-up collapsible__chevron"
-        ></i>
-      </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat,
-        pariatur.
-      </div>
-    </div>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        
-        <i
-          class="icon fa-solid fa-chevron-up collapsible__chevron"
-        ></i>
-      </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat,
-        pariatur.
+    <div class="collapsible__container">
+      <div class="collapsible collapsible--expanded">
+        <div class="collapsible__header">
+          <p class="collapsible__heading">Location Level</p>
+          <p class="collapsible__selection">
+            Test
+            <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+          </p>
+        </div>
+        <ul class="collapsible__content">
+          <li>Option 1</li>
+          <li>Option 2</li>
+          <li>Option 3</li>
+        </ul>
       </div>
     </div>
     <script src="js/main.js"></script>
