update progress on collapsible

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
           </p>
         </div>
         <ul class="collapsible__content">
-          <li>Option 1</li>
-          <li>Option 2</li>
-          <li>Option 3</li>
+          <li class="collapsible__list">Option 1</li>
+          <li class="collapsible__list">Option 2</li>
+          <li class="collapsible__list">Option 3</li>
+          <li class="collapsible__list">Option 1</li>
         </ul>
       </div>
     </div>
