update my progress

--- a/index.html
+++ b/index.html
@@ -17,12 +17,34 @@
     />
   </head>
   <body>
+    <header class="header">
+      <h1 class="header__content">
+        <i class="fa-solid fa-bicycle"></i>
+        Divvy Dashboard
+      </h1>
+    </header>
+    <section class="sidebar">
+      <ul class="sidebar__list">
+        <li class="sidebar__selection">
+          <i class="sidebar__icon fa-solid fa-map"></i
+          ><span class="sidebar__text">Map</span>
+        </li>
+        <li class="sidebar__selection">
+          <i class="sidebar__icon fa-solid fa-cloud"></i
+          ><span class="sidebar__text">Weather</span>
+        </li>
+        <li class="sidebar__selection">
+          <i class="sidebar__icon fa-solid fa-trophy"></i
+          ><span class="sidebar__text">Records</span>
+        </li>
+      </ul>
+    </section>
     <div class="collapsible__container">
       <div class="collapsible collapsible--expanded">
         <div class="collapsible__header">
           <p class="collapsible__heading">Location Level</p>
           <p class="collapsible__selection">
-            Test
+            Option 1
             <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
           </p>
         </div>
