added hover for dropdown

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
           <li class="collapsible__list">Option 2</li>
           <li class="collapsible__list">Option 3</li>
           <li class="collapsible__list">Option 1</li>
+          <li class="collapsible__list">Option 1</li>
+          <li class="collapsible__list">Option 2</li>
+          <li class="collapsible__list">Option 3</li>
+          <li class="collapsible__list">Option 1</li>
         </ul>
       </div>
     </div>
