--- a/index.html
+++ b/index.html
@@ -39,27 +39,29 @@
         </li>
       </ul>
     </section>
-    <div class="collapsible__container">
-      <div class="collapsible collapsible--expanded">
-        <div class="collapsible__header">
-          <p class="collapsible__heading">Location Level</p>
-          <p class="collapsible__selection">
-            Option 1
-            <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-          </p>
+    <section class="collapsible__block">
+      <div class="collapsible__container">
+        <div class="collapsible">
+          <div class="collapsible__header">
+            <p class="collapsible__heading">Location Level</p>
+            <p class="collapsible__selection">
+              Option 1
+              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+            </p>
+          </div>
+          <ul class="collapsible__content">
+            <li class="collapsible__list">Option 1</li>
+            <li class="collapsible__list">Option 2</li>
+            <li class="collapsible__list">Option 3</li>
+            <li class="collapsible__list">Option 1</li>
+            <li class="collapsible__list">Option 1</li>
+            <li class="collapsible__list">Option 2</li>
+            <li class="collapsible__list">Option 3</li>
+            <li class="collapsible__list">Option 1</li>
+          </ul>
         </div>
-        <ul class="collapsible__content">
-          <li class="collapsible__list">Option 1</li>
-          <li class="collapsible__list">Option 2</li>
-          <li class="collapsible__list">Option 3</li>
-          <li class="collapsible__list">Option 1</li>
-          <li class="collapsible__list">Option 1</li>
-          <li class="collapsible__list">Option 2</li>
-          <li class="collapsible__list">Option 3</li>
-          <li class="collapsible__list">Option 1</li>
-        </ul>
       </div>
-    </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
