--- a/index.html
+++ b/index.html
@@ -43,9 +43,52 @@
       <div class="collapsible__container">
         <div class="collapsible">
           <div class="collapsible__header">
-            <p class="collapsible__heading">Location Level</p>
+            <p class="collapsible__heading">Location Type</p>
             <p class="collapsible__selection">
-              Option 1
+              <span id="selectedOption1" class="collapsible__selected-option"
+                >Option 1</span
+              >
+              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+            </p>
+          </div>
+          <ul class="collapsible__content">
+            <li class="collapsible__list">City</li>
+            <li class="collapsible__list">Ward</li>
+            <li class="collapsible__list">Community Area</li>
+            <li class="collapsible__list">Neighborhood</li>
+          </ul>
+        </div>
+      </div>
+      <div class="collapsible__container">
+        <div class="collapsible">
+          <div class="collapsible__header">
+            <p class="collapsible__heading">Location</p>
+            <p class="collapsible__selection">
+              <span
+                id="selectedOption2"
+                class="collapsible__selected-option"
+              ></span>
+              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+            </p>
+          </div>
+          <ul class="collapsible__content">
+            <li class="collapsible__list">Option 1</li>
+            <li class="collapsible__list">Option 2</li>
+            <li class="collapsible__list">Option 3</li>
+            <li class="collapsible__list">Option 1</li>
+            <li class="collapsible__list">Option 1</li>
+          </ul>
+        </div>
+      </div>
+      <div class="collapsible__container">
+        <div class="collapsible">
+          <div class="collapsible__header">
+            <p class="collapsible__heading">Station Selection</p>
+            <p class="collapsible__selection">
+              <span
+                id="selectedOption3"
+                class="collapsible__selected-option"
+              ></span>
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
@@ -62,6 +105,6 @@
         </div>
       </div>
     </section>
-    <script src="js/main.js"></script>
+    <script src="js/dropdown_block.js"></script>
   </body>
 </html>
