--- a/sandbox.html
+++ b/sandbox.html
@@ -43,7 +43,7 @@
             <p class="collapsible__heading">Location</p>
             <p class="collapsible__selection">
               <span id="selectedOption2" class="collapsible__selected-option"
-                >Option 1</span
+                ></span
               >
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
@@ -63,7 +63,7 @@
             <p class="collapsible__heading">Station Selection</p>
             <p class="collapsible__selection">
               <span id="selectedOption3" class="collapsible__selected-option"
-                >Option 1</span
+                ></span
               >
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
@@ -81,6 +81,6 @@
         </div>
       </div>
     </section>
-    <script src="js/main.js"></script>
+    <script src="js/dropdown_block.js"></script>
   </body>
 </html>
