--- a/sandbox.html
+++ b/sandbox.html
@@ -3,84 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script
-      src="https://kit.fontawesome.com/7becdf7318.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="sandbox.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Leaflet Map</title>
+    <!-- Include Leaflet CSS -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Paytone+One&display=swap"
       rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="collapsible__block">
-      <div class="collapsible__container">
-        <div class="collapsible">
-          <div class="collapsible__header">
-            <p class="collapsible__heading">Location Type</p>
-            <p class="collapsible__selection">
-              <span id="selectedOption1" class="collapsible__selected-option"
-                >Option 1</span
-              >
-              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-            </p>
-          </div>
-          <ul class="collapsible__content">
-            <li class="collapsible__list">City</li>
-            <li class="collapsible__list">Ward</li>
-            <li class="collapsible__list">Community Area</li>
-            <li class="collapsible__list">Neighborhood</li>
-          </ul>
-        </div>
-      </div>
-      <div class="collapsible__container">
-        <div class="collapsible">
-          <div class="collapsible__header">
-            <p class="collapsible__heading">Location</p>
-            <p class="collapsible__selection">
-              <span id="selectedOption2" class="collapsible__selected-option"
-                ></span
-              >
-              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-            </p>
-          </div>
-          <ul class="collapsible__content">
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 2</li>
-            <li class="collapsible__list">Option 3</li>
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 1</li>
-          </ul>
-        </div>
-      </div>
-      <div class="collapsible__container">
-        <div class="collapsible">
-          <div class="collapsible__header">
-            <p class="collapsible__heading">Station Selection</p>
-            <p class="collapsible__selection">
-              <span id="selectedOption3" class="collapsible__selected-option"
-                ></span
-              >
-              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-            </p>
-          </div>
-          <ul class="collapsible__content">
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 2</li>
-            <li class="collapsible__list">Option 3</li>
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 2</li>
-            <li class="collapsible__list">Option 3</li>
-            <li class="collapsible__list">Option 1</li>
-          </ul>
-        </div>
+    <section class="map">
+      <div class="map__container">
+        <div id="map-container" class="map__layout"></div>
       </div>
     </section>
-    <script src="js/dropdown_block.js"></script>
+    <!-- Leaflet JS -->
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
