--- a/sandbox.html
+++ b/sandbox.html
@@ -12,12 +12,17 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="map">
+    <section>
       <div class="map__container">
-        <div id="map-container" class="map__layout"></div>
+        <h2 class="map__title">Bike Station Map for the City of Chicago</h2>
+        <div id="map" class="map"></div>
+        <!-- This is where your Leaflet map will be rendered -->
       </div>
     </section>
-    <!-- Leaflet JS -->
+
+
+
+    <!-- JS -->
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
