--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
         </div>
       </div>
     </section>
+    
+
+
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
+    <script src="js/script.js"></script>
     <script src="js/dropdown_block.js"></script>
   </body>
 </html>
