--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       src="https://kit.fontawesome.com/7becdf7318.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Include Leaflet CSS -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -105,15 +110,20 @@
         </div>
       </div>
     </section>
-    
+    <section class="map__block">
+      <div class="map__container">
+        <h2 class="map__title">Bike Station Map for the City of Chicago</h2>
+        <div id="map" class="map"></div>
+        <!-- This is where your Leaflet map will be rendered -->
+      </div>
+    </section>
 
-
+    <script src="js/dropdown_block.js"></script>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
     <script src="js/script.js"></script>
-    <script src="js/dropdown_block.js"></script>
   </body>
 </html>
