save progress on dropdowns

--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
-    <script src="js/script.js"></script>
+    <script src="js/map.js"></script>
   </body>
 </html>
