--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -50,14 +50,12 @@
           <div class="collapsible__header">
             <p class="collapsible__heading">Location</p>
             <p class="collapsible__selection">
-              <span id="selectedOption0" class="collapsible__selected-option"
-                >City</span
-              >
+              <span id="selectedOption0"></span>
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
           <ul class="collapsible__content">
-            <li class="collapsible__list" value="city">City</li>
+            <li class="collapsible__list" value="city">city</li>
             <li class="collapsible__list" value="ward">Ward</li>
             <li class="collapsible__list" value="community_area">
               Community Area
@@ -70,14 +68,11 @@
           <div class="collapsible__header">
             <p class="collapsible__heading">Location</p>
             <p class="collapsible__selection">
-              <span
-                id="selectedOption1"
-                class="collapsible__selected-option"
-              ></span>
+              <span id="selectedOption1"></span>
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
-          <ul class="collapsible__content test2">
+          <ul class="collapsible__content dynamic_selection">
             <!-- List items will be dynamically populated here -->
           </ul>
         </div>
@@ -87,10 +82,7 @@
           <div class="collapsible__header">
             <p class="collapsible__heading">Station Selection</p>
             <p class="collapsible__selection">
-              <span
-                id="selectedOption2"
-                class="collapsible__selected-option"
-              ></span>
+              <span id="selectedOption2"></span>
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
@@ -115,7 +107,7 @@
       </div>
     </section>
 
-    <script src="sandbox.js"></script>
+    <script src="sandbox2.js"></script>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
