add dynamic dropdowns

--- a/html_components/dropdown_block.html
+++ b/html_components/dropdown_block.html
@@ -2,19 +2,16 @@
   <div class="collapsible__container">
     <div class="collapsible">
       <div class="collapsible__header">
-        <p class="collapsible__heading">Location Type</p>
+        <p class="collapsible__heading">Location</p>
         <p class="collapsible__selection">
-          <span id="selectedOption1" class="collapsible__selected-option"
-            >Option 1</span
-          >
+          <span id="selectedOption0"></span>
           <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
         </p>
       </div>
       <ul class="collapsible__content">
-        <li class="collapsible__list">City</li>
-        <li class="collapsible__list">Ward</li>
-        <li class="collapsible__list">Community Area</li>
-        <li class="collapsible__list">Neighborhood</li>
+        <li class="collapsible__list" value="city">City</li>
+        <li class="collapsible__list" value="ward">Ward</li>
+        <li class="collapsible__list" value="community_area">Community Area</li>
       </ul>
     </div>
   </div>
@@ -23,19 +20,12 @@
       <div class="collapsible__header">
         <p class="collapsible__heading">Location</p>
         <p class="collapsible__selection">
-          <span
-            id="selectedOption2"
-            class="collapsible__selected-option"
-          ></span>
+          <span id="selectedOption1"></span>
           <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
         </p>
       </div>
-      <ul class="collapsible__content">
-        <li class="collapsible__list">Option 1</li>
-        <li class="collapsible__list">Option 2</li>
-        <li class="collapsible__list">Option 3</li>
-        <li class="collapsible__list">Option 1</li>
-        <li class="collapsible__list">Option 1</li>
+      <ul class="collapsible__content dynamic_selection">
+        <!-- List items will be dynamically populated here -->
       </ul>
     </div>
   </div>
@@ -44,10 +34,7 @@
       <div class="collapsible__header">
         <p class="collapsible__heading">Station Selection</p>
         <p class="collapsible__selection">
-          <span
-            id="selectedOption3"
-            class="collapsible__selected-option"
-          ></span>
+          <span id="selectedOption2"></span>
           <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
         </p>
       </div>
