save map progress

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
           <ul class="collapsible__content">
             <li class="collapsible__list" value="city">City</li>
             <li class="collapsible__list" value="ward">Ward</li>
-            <li class="collapsible__list" value="community_area">
-              Community Area
-            </li>
+            <li class="collapsible__list" value="community_area">Community Area</li>
           </ul>
         </div>
       </div>
@@ -87,14 +85,8 @@
             </p>
           </div>
           <ul class="collapsible__content">
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 2</li>
-            <li class="collapsible__list">Option 3</li>
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 1</li>
-            <li class="collapsible__list">Option 2</li>
-            <li class="collapsible__list">Option 3</li>
-            <li class="collapsible__list">Option 1</li>
+            <li class="collapsible__list">All</li>
+            <li class="collapsible__list">Top 5</li>
           </ul>
         </div>
       </div>
