save map progress

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <div class="collapsible__container">
         <div class="collapsible">
           <div class="collapsible__header">
-            <p class="collapsible__heading">Location</p>
+            <p class="collapsible__heading">Location Type</p>
             <p class="collapsible__selection">
-              <span id="selectedOption0"></span>
+              <span id="selectedOption0" class="location_type_selection"></span>
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
