--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           <ul class="collapsible__content">
             <li class="collapsible__list" value="city">City</li>
             <li class="collapsible__list" value="ward">Ward</li>
-            <li class="collapsible__list" value="community_area">Community Area</li>
+            <li class="collapsible__list" value="community_area">
+              Community Area
+            </li>
           </ul>
         </div>
       </div>
@@ -99,12 +101,14 @@
       </div>
     </section>
 
-    <script src="js/dropdowns.js"></script>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
+    <script src="js/main.js"></script>
+    <script src="js/fetch_data.js"></script>
+    <script src="js/dropdowns.js"></script>
     <script src="js/map.js"></script>
   </body>
 </html>
