--- a/html_components/dropdown_block.html
+++ b/html_components/dropdown_block.html
@@ -2,16 +2,17 @@
   <div class="collapsible__container">
     <div class="collapsible">
       <div class="collapsible__header">
-        <p class="collapsible__heading">Location</p>
+        <p class="collapsible__heading">Location Type</p>
         <p class="collapsible__selection">
-          <span id="selectedOption0"></span>
+          <span id="selectedOption0" class="location_type_selection"></span>
           <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
         </p>
       </div>
       <ul class="collapsible__content">
         <li class="collapsible__list" value="city">City</li>
-        <li class="collapsible__list" value="ward">Ward</li>
+        <li class="collapsible__list" value="neighborhood">Neighborhood</li>
         <li class="collapsible__list" value="community_area">Community Area</li>
+        <li class="collapsible__list" value="ward">Ward</li>
       </ul>
     </div>
   </div>
@@ -39,15 +40,16 @@
         </p>
       </div>
       <ul class="collapsible__content">
-        <li class="collapsible__list">Option 1</li>
-        <li class="collapsible__list">Option 2</li>
-        <li class="collapsible__list">Option 3</li>
-        <li class="collapsible__list">Option 1</li>
-        <li class="collapsible__list">Option 1</li>
-        <li class="collapsible__list">Option 2</li>
-        <li class="collapsible__list">Option 3</li>
-        <li class="collapsible__list">Option 1</li>
+        <li class="collapsible__list">All</li>
+        <li class="collapsible__list">Top 5</li>
       </ul>
     </div>
+  </div>
+</section>
+<section class="map__block">
+  <div class="map__container">
+    <h2 class="map__title">Bike Station Map for the City of Chicago</h2>
+    <div id="map" class="map"></div>
+    <!-- This is where your Leaflet map will be rendered -->
   </div>
 </section>
