--- a/index.html
+++ b/index.html
@@ -50,16 +50,21 @@
           <div class="collapsible__header">
             <p class="collapsible__heading">Location Type</p>
             <p class="collapsible__selection">
-              <span id="selectedOption0" class="location_type_selection"></span>
+              <span
+                id="selectedOption0"
+                class="location_type_selection"
+                ></span
+              >
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
           <ul class="collapsible__content">
             <li class="collapsible__list" value="city">City</li>
-            <li class="collapsible__list" value="ward">Ward</li>
+            <li class="collapsible__list" value="neighborhood">Neighborhood</li>
             <li class="collapsible__list" value="community_area">
               Community Area
             </li>
+            <li class="collapsible__list" value="ward">Ward</li>
           </ul>
         </div>
       </div>
@@ -82,7 +87,7 @@
           <div class="collapsible__header">
             <p class="collapsible__heading">Station Selection</p>
             <p class="collapsible__selection">
-              <span id="selectedOption2"></span>
+              <span id="selectedOption2">All</span>
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
@@ -106,9 +111,9 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
-    <script src="js/main.js"></script>
     <script src="js/fetch_data.js"></script>
     <script src="js/dropdowns.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
