create default map

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
               <span
                 id="selectedOption0"
                 class="location_type_selection"
-                ></span
+                value="city"
+                >City</span
               >
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
@@ -73,7 +74,7 @@
           <div class="collapsible__header">
             <p class="collapsible__heading">Location</p>
             <p class="collapsible__selection">
-              <span id="selectedOption1"></span>
+              <span id="selectedOption1">Chicago</span>
               <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
             </p>
           </div>
