--- a/index.html
+++ b/index.html
@@ -83,25 +83,10 @@
           </ul>
         </div>
       </div>
-      <div class="collapsible__container">
-        <div class="collapsible">
-          <div class="collapsible__header">
-            <p class="collapsible__heading">Station Selection</p>
-            <p class="collapsible__selection">
-              <span id="selectedOption2">All</span>
-              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-            </p>
-          </div>
-          <ul class="collapsible__content">
-            <li class="collapsible__list">All</li>
-            <li class="collapsible__list">Top 5</li>
-          </ul>
-        </div>
-      </div>
     </section>
     <section class="map__block">
       <div class="map__container">
-        <h2 class="map__title">Bike Station Map for the City of Chicago</h2>
+        <h2 class="map__title">Divvy Station Map for the City of Chicago</h2>
         <div id="map" class="map"></div>
         <!-- This is where your Leaflet map will be rendered -->
       </div>
