--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </section>
     <section class="map__block">
       <div class="map__container">
-        <h2 class="map__title">Divvy Station Map for the City: Select a Location</h2>
+        <h2 class="map__title">Divvy Station Map City: Select a Location</h2>
         <div id="map" class="map"></div>
         <!-- This is where your Leaflet map will be rendered -->
       </div>
