--- a/weather.html
+++ b/weather.html
@@ -44,5 +44,28 @@
         </li>
       </ul>
     </section>
+    <section>
+      <div class="chart__container">
+        <div class="line__chart">
+          <h2 class="section__header">Divvy Rides Per Month</h2>
+          <canvas id="rides__Chart"></canvas>
+        </div>
+        <div class="pie__chart">
+          <h3 class="section__header">Divvy Rides Per Season</h3>
+          <canvas id="pie__Chart"></canvas>
+        </div>
+      </div>
+  
+      <div class="weather__chart">
+        <h4 class="section__header">Divvy Rides by Precipitation Level</h4>
+        <canvas id="weather__Chart"></canvas>
+      </div>
+    </div>
+    </section>
+    <!-- D3 JavaScript -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
