create filtered function for mui

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -115,5 +115,6 @@
     <script src="js/dropdowns.js"></script>
     <script src="js/map.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/react.js"></script>
   </body>
 </html>
