--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -45,50 +45,50 @@
         </li>
       </ul>
     </section>
-    <section class="content__block">
-      <section class="left">
-        <section class="collapsible__block">
-          <div class="collapsible__container">
-            <div class="collapsible">
-              <div class="collapsible__header">
-                <p class="collapsible__heading">Location Type</p>
-                <p class="collapsible__selection">
-                  <span
-                    id="selectedOption0"
-                    class="location_type_selection"
-                    value="city"
-                    >City</span
-                  >
-                  <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-                </p>
-              </div>
-              <ul class="collapsible__content">
-                <li class="collapsible__list" value="city">City</li>
-                <li class="collapsible__list" value="neighborhood">
-                  Neighborhood
-                </li>
-                <li class="collapsible__list" value="community_area">
-                  Community Area
-                </li>
-                <li class="collapsible__list" value="ward">Ward</li>
-              </ul>
+    <section class="main__block">
+      <section class="collapsible__block">
+        <div class="collapsible__container">
+          <div class="collapsible">
+            <div class="collapsible__header">
+              <p class="collapsible__heading">Location Type</p>
+              <p class="collapsible__selection">
+                <span
+                  id="selectedOption0"
+                  class="location_type_selection"
+                  value="city"
+                  >City</span
+                >
+                <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+              </p>
             </div>
+            <ul class="collapsible__content">
+              <li class="collapsible__list" value="city">City</li>
+              <li class="collapsible__list" value="neighborhood">
+                Neighborhood
+              </li>
+              <li class="collapsible__list" value="community_area">
+                Community Area
+              </li>
+              <li class="collapsible__list" value="ward">Ward</li>
+            </ul>
           </div>
-          <div class="collapsible__container">
-            <div class="collapsible">
-              <div class="collapsible__header">
-                <p class="collapsible__heading">Location</p>
-                <p class="collapsible__selection">
-                  <span id="selectedOption1"></span>
-                  <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-                </p>
-              </div>
-              <ul class="collapsible__content dynamic_selection">
-                <!-- List items will be dynamically populated here -->
-              </ul>
+        </div>
+        <div class="collapsible__container">
+          <div class="collapsible">
+            <div class="collapsible__header">
+              <p class="collapsible__heading">Location</p>
+              <p class="collapsible__selection">
+                <span id="selectedOption1"></span>
+                <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+              </p>
             </div>
+            <ul class="collapsible__content dynamic_selection">
+              <!-- List items will be dynamically populated here -->
+            </ul>
           </div>
-        </section>
+        </div>
+      </section>
+      <section class="content__block">
         <section class="map__block">
           <div class="map__container">
             <h2 class="map__title">
@@ -98,10 +98,13 @@
             <!-- This is where your Leaflet map will be rendered -->
           </div>
         </section>
-      </section>
-      <section class="right">
         <section class="react__block">
-          <div id="root"></div>
+          <div class="table__container">
+            <h2 class="table__title">
+              Divvy Station Table
+            </h2>
+            <div id="root"></div>
+          </div>
         </section>
       </section>
     </section>
