--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Divvy Dashboard</title>
     <script
       src="https://kit.fontawesome.com/7becdf7318.js"
       crossorigin="anonymous"
@@ -44,52 +45,68 @@
         </li>
       </ul>
     </section>
-    <section class="collapsible__block">
-      <div class="collapsible__container">
-        <div class="collapsible">
-          <div class="collapsible__header">
-            <p class="collapsible__heading">Location Type</p>
-            <p class="collapsible__selection">
-              <span
-                id="selectedOption0"
-                class="location_type_selection"
-                value="city"
-                >City</span
-              >
-              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-            </p>
+    <section class="main__block">
+      <section class="collapsible__block">
+        <div class="collapsible__container">
+          <div class="collapsible">
+            <div class="collapsible__header">
+              <p class="collapsible__heading">Location Type</p>
+              <p class="collapsible__selection">
+                <span
+                  id="selectedOption0"
+                  class="location_type_selection"
+                  value="city"
+                  >City</span
+                >
+                <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+              </p>
+            </div>
+            <ul class="collapsible__content">
+              <li class="collapsible__list" value="city">City</li>
+              <li class="collapsible__list" value="neighborhood">
+                Neighborhood
+              </li>
+              <li class="collapsible__list" value="community_area">
+                Community Area
+              </li>
+              <li class="collapsible__list" value="ward">Ward</li>
+            </ul>
           </div>
-          <ul class="collapsible__content">
-            <li class="collapsible__list" value="city">City</li>
-            <li class="collapsible__list" value="neighborhood">Neighborhood</li>
-            <li class="collapsible__list" value="community_area">
-              Community Area
-            </li>
-            <li class="collapsible__list" value="ward">Ward</li>
-          </ul>
         </div>
-      </div>
-      <div class="collapsible__container">
-        <div class="collapsible">
-          <div class="collapsible__header">
-            <p class="collapsible__heading">Location</p>
-            <p class="collapsible__selection">
-              <span id="selectedOption1"></span>
-              <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-            </p>
+        <div class="collapsible__container">
+          <div class="collapsible">
+            <div class="collapsible__header">
+              <p class="collapsible__heading">Location</p>
+              <p class="collapsible__selection">
+                <span id="selectedOption1"></span>
+                <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
+              </p>
+            </div>
+            <ul class="collapsible__content dynamic_selection">
+              <!-- List items will be dynamically populated here -->
+            </ul>
           </div>
-          <ul class="collapsible__content dynamic_selection">
-            <!-- List items will be dynamically populated here -->
-          </ul>
         </div>
-      </div>
-    </section>
-    <section class="map__block">
-      <div class="map__container">
-        <h2 class="map__title">Divvy Station Map City: Select a Location</h2>
-        <div id="map" class="map"></div>
-        <!-- This is where your Leaflet map will be rendered -->
-      </div>
+      </section>
+      <section class="content__block">
+        <section class="map__block">
+          <div class="map__container">
+            <h2 class="map__title">
+              Divvy Station Map City: Select a Location
+            </h2>
+            <div id="map" class="map"></div>
+            <!-- This is where your Leaflet map will be rendered -->
+          </div>
+        </section>
+        <section class="react__block">
+          <div class="table__container">
+            <h2 class="table__title">
+              Divvy Station Table
+            </h2>
+            <div id="root"></div>
+          </div>
+        </section>
+      </section>
     </section>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -99,6 +116,8 @@
     <script src="js/fetch_data.js"></script>
     <script src="js/dropdowns.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/react.js"></script>
     <script src="js/main.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
