--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
         </section>
         <section class="react__block">
           <div class="table__container">
-            <h2 class="table__title">
-              Divvy Station Table
-            </h2>
+            <h2 class="table__title">Divvy Station Table</h2>
             <div id="root"></div>
           </div>
         </section>
@@ -118,6 +116,6 @@
     <script src="js/map.js"></script>
     <script src="js/react.js"></script>
     <script src="js/main.js"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
