--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <script src="js/dropdowns.js"></script>
     <script src="js/map.js"></script>
     <script src="js/react.js"></script>
-    <script src="js/main.js"></script>
-    <script type="module" src="main.tsx"></script>
+    <script src="js/main_functions.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
