--- a/index.html
+++ b/index.html
@@ -116,6 +116,6 @@
     <script src="js/map.js"></script>
     <script src="js/react.js"></script>
     <script src="js/main_functions.js"></script>
-    <script type="module" src="src/main.tsx"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
