--- a/index.html
+++ b/index.html
@@ -117,5 +117,7 @@
     <script src="js/react.js"></script>
     <script src="js/main_functions.js"></script>
     <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/App.js"></script>
+    <script type="module" src="src/data_grid.js"></script>
   </body>
 </html>
