--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <script src="js/map.js"></script>
     <script src="js/react.js"></script>
     <script src="js/main_functions.js"></script>
-    <script type="module" src="src/main.js"></script>
-    <script type="module" src="src/App.js"></script>
-    <script type="module" src="src/data_grid.js"></script>
+    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/App.js"></script>
+    <script type="module" src="./src/data_grid.js"></script>
   </body>
 </html>
