--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </section>
         <section class="react__block">
           <div class="table__container">
-            <h2 class="table__title">Divvy Station Table</h2>
+            <h2 class="table__title">Divvy Station Info</h2>
             <div id="root"></div>
           </div>
         </section>
