--- a/weather.html
+++ b/weather.html
@@ -44,23 +44,33 @@
         </li>
       </ul>
     </section>
-    <section>
-      <div class="chart__container">
-        <div class="line__chart">
-          <h2 class="section__header">Divvy Rides Per Month</h2>
-          <canvas id="rides__Chart"></canvas>
+    <section class="main__block">
+      <div class="top__section">
+        <div class="chart__container">
+          <div class="line__chart">
+            <h2 class="section__header">Divvy Rides Per Month</h2>
+            <div>
+              <canvas id="rides__Chart"></canvas>
+            </div>
+          </div>
         </div>
-        <div class="pie__chart">
-          <h3 class="section__header">Divvy Rides Per Season</h3>
-          <canvas id="pie__Chart"></canvas>
+        <div class="chart__container">
+          <div class="pie__chart">
+            <h3 class="section__header">Divvy Rides Per Season</h3>
+            <div>
+              <canvas id="pie__Chart"></canvas>
+            </div>
+          </div>
         </div>
       </div>
-  
-      <div class="weather__chart">
-        <h4 class="section__header">Divvy Rides by Precipitation Level</h4>
-        <canvas id="weather__Chart"></canvas>
+      <div class="chart__container__bottom">
+        <div class="weather__chart">
+          <h4 class="section__header">Divvy Rides by Precipitation Level</h4>
+          <div class = "weather__chart">
+            <canvas id="weather__Chart"></canvas>
+          </div>
+        </div>
       </div>
-    </div>
     </section>
     <!-- D3 JavaScript -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
