--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       </section>
     </section>
     <script
+      type="module"
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
