add primary js file

--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
-    <script type="module" src="js/fetch_data.js"></script>
-    <script type="module" src="js/map.js"></script>
-    <script type="module" src="js/dropdowns.js"></script>
-    <script type="module" src="js/main_functions.js"></script>
+    <script type="module" src="js/primary.js"></script>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
