chagne folder name

--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
       crossorigin=""
     ></script>
     <script type="module" src="js/primary.js"></script>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="react/main.js"></script>
   </body>
 </html>
