udpate npm buil

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
-    <script type="module" src="js/primary.js"></script>
-    <script type="module" src="react/main.js"></script>
+    <script type="module" src="src/main/primary.js"></script>
+    <script type="module" src="src/main/react/main.js"></script>
   </body>
 </html>
