update style sheet

--- a/html_components/map.html
+++ b/html_components/map.html
@@ -1,6 +1,6 @@
 <section class="map__block">
   <div class="map__container">
-    <h2 class="map__title">Bike Station Map for the City of Chicago</h2>
+    <h2 class="map__title">Divvy Station Map City: Select a Location</h2>
     <div id="map" class="map"></div>
     <!-- This is where your Leaflet map will be rendered -->
   </div>
