--- a/html_components/sidebar.html
+++ b/html_components/sidebar.html
@@ -1,17 +1,12 @@
-<div class="collapsible__container">
-  <div class="collapsible collapsible--expanded">
-    <div class="collapsible__header">
-      <p class="collapsible__heading">Location Level</p>
-      <p class="collapsible__selection">
-        Option 1
-        <i class="fa-solid fa-chevron-up collapsible__chevron"></i>
-      </p>
-    </div>
-    <ul class="collapsible__content">
-      <li class="collapsible__list">Option 1</li>
-      <li class="collapsible__list">Option 2</li>
-      <li class="collapsible__list">Option 3</li>
-      <li class="collapsible__list">Option 1</li>
-    </ul>
-  </div>
-</div>
+<section class="sidebar">
+  <ul class="sidebar__list">
+    <li class="sidebar__selection">
+      <i class="sidebar__icon active--link fa-solid fa-map"></i
+      ><a href="index.html" class="sidebar__text active--link">Map</a>
+    </li>
+    <li class="sidebar__selection">
+      <i class="sidebar__icon fa-solid fa-cloud"></i>
+      <a href="weather.html" class="sidebar__text">Weather</a>
+    </li>
+  </ul>
+</section>
